--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
               chmod -R 755 /home/ec2-user/Apollo3
               chmod 755 /home/ec2-user/Apollo3/docker-compose.yml
               cd ~/Apollo3
-              sudo docker-compose down
-              sudo docker-compose pull
-              sudo docker-compose up -d
+              sudo docker compose down
+              sudo docker compose pull
+              sudo docker compose up -d
               '
