--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GMOD/Apollo3.git",
+    "url": "git+https://github.com/GMOD/Apollo3.git",
     "directory": "packages/apollo-common"
   },
   "main": "./dist/index.js",
