--- a/docker/config/config.json
+++ b/docker/config/config.json
@@ -29,8 +29,8 @@
       "internetAccountId": "apolloInternetAccount",
       "name": "Demo Server",
       "description": "A server hosting a small fictional organism to demonstrate Apollo capabilities",
-      "domains": ["localhost"],
-      "baseURL": "http://localhost"
+      "domains": ["localhost:3999"],
+      "baseURL": "http://localhost:3999"
     }
   ],
   "defaultSession": {
