node base image arm64 platform fix

--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,7 @@ name: apollo
 
 services:
   apollo-collaboration-server:
-    image: public.ecr.aws/p1r0y7k4/apollo-collaboration-server-alpha:latest
+    image: shashankbrgowda/apollo-collaboration-server-alpha:latest
     volumes:
       - uploaded-files-volume:/data/uploads
     env_file: ./docker/.development.env
@@ -19,7 +19,7 @@ services:
         condition: service_completed_successfully
 
   client:
-    image: public.ecr.aws/p1r0y7k4/apollo-jbrowse-plugin:latest
+    image: shashankbrgowda/apollo-jbrowse-plugin:latest
     ports:
       - 80:80
       - 443:443
