Add staging deployment

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,29 +3,87 @@ name: Push
 on: push
 
 jobs:
-  build:
-    name: Lint and build
+  # build:
+  #   name: Build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out
+  #       uses: actions/checkout@v3
+  #     - name: Use Node.js 18.x
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18
+  #         cache: yarn
+  #     - name: Install
+  #       run: yarn --immutable
+  #     - name: Build collaboration server
+  #       run: yarn build
+  #       working-directory: packages/apollo-collaboration-server
+  #     - name: Build plugin
+  #       run: yarn build
+  #       working-directory: packages/jbrowse-plugin-apollo
+  # lint:
+  #   name: Lint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out
+  #       uses: actions/checkout@v3
+  #     - name: Use Node.js 18.x
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18
+  #         cache: yarn
+  #     - name: Install
+  #       run: yarn --immutable
+  #       # Have to build shared before linting so type-based lint rules can
+  #       # run correctly
+  #     - name: Build shared
+  #       run: yarn build
+  #       working-directory: packages/apollo-shared
+  #     - name: Lint codebase
+  #       run: yarn eslint --ext .js,.ts,.jsx,.tsx .
+  deploy:
     runs-on: ubuntu-latest
+    environment: staging
+    if: github.ref == 'refs/heads/deploy_staging'
     steps:
       - name: Check out
         uses: actions/checkout@v3
-      - name: Use Node.js 18.x
-        uses: actions/setup-node@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn --immutable
-        # Have to build shared before linting so type-based lint rules can
-        # run correctly
-      - name: Build shared
-        run: yarn build
-        working-directory: packages/apollo-shared
-      - name: Lint codebase
-        run: yarn eslint --ext .js,.ts,.jsx,.tsx .
-      - name: Build collaboration server
-        run: yarn build
-        working-directory: packages/apollo-collaboration-server
-      - name: Build plugin
-        run: yarn build
-        working-directory: packages/jbrowse-plugin-apollo
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Get instance address
+        id: ec2-describe-instances
+        run: |
+          INSTANCE_ADDRESS=$(aws ec2 describe-instances \
+            --instance-ids ${{ vars.INSTANCE_ID }} \
+            --query "Reservations[*].Instances[*].[PublicDnsName]" \
+            --output text)
+          echo "INSTANCE_ADDRESS=$INSTANCE_ADDRESS" >> "$GITHUB_OUTPUT"
+      - name: Set up SSH
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY  }}" >  ~/.ssh/staging
+          chmod 600 ~/.ssh/staging
+          cat >>~/.ssh/config <<END
+          Host staging
+            HostName ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }}
+            User ec2-user
+            IdentityFile ~/.ssh/staging
+          END
+          ssh-keyscan -H ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }} >> ~/.ssh/known_hosts
+      - name: Create Docker context
+        run: |
+          docker context create staging \
+            --docker ssh://staging \
+            --description "Staging server"
+      - name: Deploy
+        env:
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET:  ${{ secrets.GOOGLE_CLIENT_SECRET }}
+        working-directory: .github/workflows/deploy
+        run: docker --context staging compose up --detach
