--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -15,7 +15,7 @@
     "start:no-watch": "yarn build:shared && yarn start:nest",
     "start:debug": "yarn build:shared && yarn start:nest --debug --watch",
     "deb": "ts-node-dev src/main.ts",
-    "start:prod": "NODE_ENV=production pm2 --no-daemon start dist/main.js",
+    "start:prod": "NODE_ENV=production node dist/main.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -64,7 +64,6 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-microsoft": "^1.0.0",
-    "pm2": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
