--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -3,7 +3,7 @@
 ##############
 
 # URL
-URL=http://localhost
+URL=http://localhost:3999
 
 # MongoDB connection
 MONGODB_URI=mongodb://127.0.0.1:27017/apolloDb
