--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -104,6 +104,12 @@ jobs:
           docker context create staging \
             --docker host=ssh://staging \
             --description "Staging server"
+      - name: Log in to the GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Deploy
         env:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
