--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,10 +42,34 @@ jobs:
         working-directory: packages/apollo-shared
       - name: Lint codebase
         run: yarn eslint --ext .js,.ts,.jsx,.tsx .
+  build-and-push-docker:
+    name: Build and push Docker image
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Log in to the GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and push Apollo collaboration server image
+      uses: docker/build-push-action@v5
+      with:
+        platforms: linux/arm64/v8,linux/amd64
+        push: true
+        tags: ghcr.io/gmod/apollo-collaboration-server:development
+        outputs: type=image,annotation-index.org.opencontainers.image.description=Apollo collaboration server
   deploy:
+    name: Deploy to demo staging server
     runs-on: ubuntu-latest
     environment: staging
     if: github.ref == 'refs/heads/main'
+    needs: build-and-push-docker
     steps:
       - name: Check out
         uses: actions/checkout@v3
@@ -80,6 +104,12 @@ jobs:
           docker context create staging \
             --docker host=ssh://staging \
             --description "Staging server"
+      - name: Log in to the GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Deploy
         env:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
