--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,7 @@ test/data/downloaded
 test/uploaded
 test/downloaded
 packages/apollo-collaboration-server/test/uploaded
+
+.docusaurus
+.cache-loader
+build
