--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -1,4 +1,4 @@
-name: Test Apollo CLI
+name: Test CLI
 on:
   push:
     branches:
@@ -30,7 +30,7 @@ jobs:
       - name: Start apollo
         run: |
           yarn --cwd packages/apollo-shared start & 
-          yarn --cwd packages/apollo-collaboration-server start
+          yarn --cwd packages/apollo-collaboration-server start &
 
       - name: Run tests
         run: python3 ./test/test.py
