Add new deployment docs

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -51,8 +51,8 @@ MICROSOFT_CLIENT_SECRET=~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M
 # Application port, defaults to 3999
 # PORT=3999
 
-# Enable all CORS requests, defaults to true
-# CORS=true
+# Enable all CORS requests, defaults to false
+# CORS=false
 
 # Comma-separated list of log levels to output
 # Possible values are: error, warn, log, debug, verbose.
