Enable CORS in development env

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -52,7 +52,7 @@ MICROSOFT_CLIENT_SECRET=~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M
 # PORT=3999
 
 # Enable all CORS requests, defaults to false
-# CORS=false
+CORS=true
 
 # Comma-separated list of log levels to output
 # Possible values are: error, warn, log, debug, verbose.
