--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,6 +1,10 @@
 name: Pull Request
 
-on: pull_request
+# on: pull_request
+on:
+  push:
+    branches:
+      - cli_data_setup_docs
 
 jobs:
   build:
