--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -41,6 +41,7 @@
     "@oclif/core": "^3.18.2",
     "@oclif/plugin-help": "^6.0.8",
     "bson": "^6.3.0",
+    "cli-progress": "^3.12.0",
     "joi": "^17.7.0",
     "open": "^9.1.0",
     "tslib": "^2.3.1",
@@ -51,6 +52,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@oclif/test": "^3.1.3",
     "@types/chai": "^4",
+    "@types/cli-progress": "^3",
     "@types/inquirer": "^9.0.7",
     "@types/mocha": "^10",
     "@types/node": "^18.14.2",
