--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -15,6 +15,7 @@
     "@jbrowse/core": "^2.7.0",
     "apollo-schemas": "workspace:^",
     "bson-objectid": "^2.0.4",
+    "express": "^4.18.0",
     "tslib": "^2.3.1"
   },
   "peerDependencies": {
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
+    "@types/express": "^4",
     "@types/node": "^18.14.2",
     "apollo-mst": "workspace:^",
     "mongoose": "^6.12.0",
