Add root user access to staging server

--- a/.github/workflows/deploy/compose.yml
+++ b/.github/workflows/deploy/compose.yml
@@ -16,6 +16,9 @@ services:
       SESSION_SECRET: ${SESSION_SECRET}
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      ALLOW_ROOT_USER: true
+      ROOT_USER_NAME: ${ROOT_USER_NAME}
+      ROOT_USER_PASSWORD: ${ROOT_USER_PASSWORD}
     ports:
       - 3999:3999
     volumes:
