--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -139,6 +139,8 @@ jobs:
           SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          ROOT_USER_NAME: ${{ secrets.ROOT_USER_NAME }}
+          ROOT_USER_PASSWORD: ${{ secrets.ROOT_USER_PASSWORD }}
           URL: ${{ vars.URL }}
         working-directory: .github/workflows/deploy
         run: |
