Use function instead of alias

--- a/.github/workflows/cleanup_staging_server.yml
+++ b/.github/workflows/cleanup_staging_server.yml
@@ -60,7 +60,7 @@ jobs:
 
           export APOLLO_PROFILE=auto
           function apollo () {
-            yarn node bin/run.js
+            yarn node bin/run.js "$@"
           }
 
           $apollo config address http://localhost
